# daemon_monitor

./: CMakeLists.txt  audit_analysis.c  check&updt_daemons.c  daemons.txt  head.h  init.c  main  main.c  makefile  monitor  monitor-mips  mylogs.txt
